* Fix #160 Menu: Submenu open overlap (v. 1.10.1)
* Clean old jQuery Version
* Add jQuery UI 1.10.2

--- a/css/custom-theme/jquery.ui.1.10.2.ie.css
+++ b/css/custom-theme/jquery.ui.1.10.2.ie.css
@@ -3,7 +3,7 @@
 /*
  * jQuery UI Tabs 1.10.0
  *
- * Copyright 2012, AUTHORS.txt (http://jqueryui.com/about)
+ * Copyright 2013, AUTHORS.txt (http://jqueryui.com/about)
  * Dual licensed under the MIT or GPL Version 2 licenses.
  * http://jquery.org/license
  *
@@ -20,9 +20,9 @@
 }
 
 /*
- * jQuery UI Button 1.10.1
+ * jQuery UI Button 1.10.2
  *
- * Copyright 2012, AUTHORS.txt (http://jqueryui.com/about)
+ * Copyright 2013, AUTHORS.txt (http://jqueryui.com/about)
  * Dual licensed under the MIT or GPL Version 2 licenses.
  * http://jquery.org/license
  *
@@ -46,4 +46,10 @@
 	top:50%;
 	margin-top: 0px;
 	margin-bottom:-28px;
+}
+
+.ui-menu li {
+  list-style-type: none;
+  display: inline;
+  line-height: 0;
 }
